manifests/base/webhook-gw.yaml
---
apiVersion: argoproj.io/v1alpha1
kind: Gateway
metadata:
  name: solgate-webhook
spec:
  type: webhook
  eventSourceRef:
    name: solgate-webhook
  template:
    serviceAccountName: argo-events-sa
  subscribers:
    http:
      - "http://solgate-sensor-sensor:9300/"
  service:
    spec:
      ports:
        - port: 12000
          targetPort: 12000
      type: LoadBalancer

---
apiVersion: v1
kind: Route
metadata:
  name: solgate-webhook
spec:
  port:
    targetPort: 12000
  to:
    kind: Service
    name: solgate-webhook-gateway
